--- a/login.html
+++ b/login.html
@@ -1,1 +1,27 @@
-!daalo code bhai ismien !!!
+<!DOCTYPE html>
+<head>
+  <link rel="stylesheet" type="text/css" href="login.css">
+  <title>Welcome</title>
+</head>
+
+<body>
+  <div id="header">
+    <h1>Name Of Company</h1>
+  </div>
+  
+  <div id="nav">
+    <ul>
+      <li>Home</li>
+      <li>About</li>
+      <li>Contact Us</li>
+    </ul>
+  </div>
+  
+  <div id="section">
+    <h2>Introduction</h2>
+  </div>
+  
+  <div id="login">
+    
+  </div>
+</body>
